--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
                     <li>
                         <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i>
                         </span>
-                        <span class="text">+447393139001</span>
+                        <span class="text">+447393*****</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i>
                         </span>
-                        <span class="text">Davidtolu110@gmail.com</span>
+                        <span class="text">Davi******110@gmail.com</span>
                     </li> <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
                         </span>
-                        <span class="text">DavidIlesanmi/Linkedin</span>
+                        <span class="text">Dav****/Linkedin</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
                         </span>
-                        <span class="text">Glasgow, United Kingdom</span>
+                        <span class="text">Glasgow,***** </span>
                     </li>
                 </ul>
             </div>
